[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/TitleScn.gd" type="Script" id=1]
[ext_resource path="res://assets/modern_dress_up_blurred_bg.png" type="Texture" id=2]
[ext_resource path="res://assets/dressup_blurred_wardrobe.png" type="Texture" id=3]
[ext_resource path="res://assets/classic_dress_up_blurred_bg.png" type="Texture" id=4]
[ext_resource path="res://WinDialogs.tscn" type="PackedScene" id=5]

[node name="Start" type="Node"]
script = ExtResource( 1 )

[node name="Modern" type="Node2D" parent="."]

[node name="ModernBG" type="Sprite" parent="Modern"]
position = Vector2( 400, 277 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="WordrobeBG" type="Sprite" parent="Modern"]
position = Vector2( 492.609, 280.27 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ClassicBG" type="Sprite" parent="."]
visible = false
position = Vector2( 400, 277 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="MenuRf" type="ReferenceRect" parent="."]
margin_left = 221.0
margin_top = 80.0
margin_right = 762.0
margin_bottom = 395.0

[node name="StartVbox" type="VBoxContainer" parent="MenuRf"]
margin_left = 14.0
margin_top = 14.0
margin_right = 150.0
margin_bottom = 99.0

[node name="PlayBtn" type="Button" parent="MenuRf/StartVbox"]
margin_right = 136.0
margin_bottom = 20.0
toggle_mode = true
text = "KPLY"

[node name="CreditsBtn" type="Button" parent="MenuRf/StartVbox"]
margin_top = 24.0
margin_right = 136.0
margin_bottom = 44.0
text = "KCRE"

[node name="LicenseBtn" type="Button" parent="MenuRf/StartVbox"]
margin_top = 48.0
margin_right = 136.0
margin_bottom = 68.0
text = "KLIC"

[node name="ModePanel" type="Panel" parent="MenuRf"]
visible = false
margin_left = 168.0
margin_top = 14.0
margin_right = 314.0
margin_bottom = 106.0

[node name="PlayVbox" type="VBoxContainer" parent="MenuRf/ModePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_lock_": true
}

[node name="ModeLbl" type="Label" parent="MenuRf/ModePanel/PlayVbox"]
margin_right = 136.0
margin_bottom = 14.0
text = "KGMO"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ModernBtn" type="Button" parent="MenuRf/ModePanel/PlayVbox"]
margin_top = 18.0
margin_right = 136.0
margin_bottom = 38.0
text = "Modern"
__meta__ = {
"_edit_lock_": true
}

[node name="ClassicBtn" type="Button" parent="MenuRf/ModePanel/PlayVbox"]
margin_top = 42.0
margin_right = 136.0
margin_bottom = 62.0
text = "KCLS"
__meta__ = {
"_edit_lock_": true
}

[node name="WinDialogs" parent="." instance=ExtResource( 5 )]

[connection signal="toggled" from="MenuRf/StartVbox/PlayBtn" to="." method="_on_PlayBtn_toggled"]
[connection signal="pressed" from="MenuRf/StartVbox/CreditsBtn" to="." method="_on_CreditsBtn_pressed"]
[connection signal="pressed" from="MenuRf/StartVbox/LicenseBtn" to="." method="_on_LicenseBtn_pressed"]
[connection signal="pressed" from="MenuRf/ModePanel/PlayVbox/ModernBtn" to="." method="_on_ModernBtn_pressed"]
[connection signal="mouse_entered" from="MenuRf/ModePanel/PlayVbox/ClassicBtn" to="." method="_on_ClassicBtn_mouse_entered"]
[connection signal="mouse_exited" from="MenuRf/ModePanel/PlayVbox/ClassicBtn" to="." method="_on_ClassicBtn_mouse_exited"]
[connection signal="pressed" from="MenuRf/ModePanel/PlayVbox/ClassicBtn" to="." method="_on_ClassicBtn_pressed"]
